--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -24,5 +24,5 @@
     <%= f.label :password_confirmation %><br />
     <%= f.text_field :password_confirmation %>
   </div>
-  <div class="actions"<%= f.submit %></div>
+  <div class="actions"><%= f.submit %></div>
 <% end %>
