--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -12,17 +12,11 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= f.label :email %><br />
+    <%= f.label :email %>
     <%= f.text_field :email %>
-  </div>
-  <div class="field">
-    <%= f.label :password %><br />
+    <%= f.label :password %>
     <%= f.text_field :password %>
-  </div>
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
+    <%= f.label :password_confirmation %>
     <%= f.text_field :password_confirmation %>
-  </div>
-  <div class="actions"><%= f.submit %></div>
+    <%= f.submit %>
 <% end %>
