--- a/app/views/urls/index.html.erb
+++ b/app/views/urls/index.html.erb
@@ -4,6 +4,7 @@
     <% if current_user %>
       Logged in as <%= current_user.email %>.
       <%= link_to "Log Out", logout_path %>
+      <%= link_to "View Link Stats", link_stats_path %>
     <% else %>
       <%= link_to "Sign Up", signup_path %>
       <%= link_to "Log In", login_path %>
@@ -16,6 +17,7 @@
 <%= form_for @url do |f|  %>
   <%= f.label :original_url  %>
   <%= f.text_field :original_url %>
+  <%= f.hidden_field :user_id %>
   <%= f.submit %>
 <% end %>
 
