minimizes routes, spiffs up UI

--- a/app/views/urls/index.html.erb
+++ b/app/views/urls/index.html.erb
@@ -1,31 +1,40 @@
-<h1>URLYTINY!</h1>
-<body>
-  <div id="user_header">
-    <% if current_user %>
-      Logged in as <%= current_user.email %>.
-      <%= link_to "Log Out", logout_path %>
-      <%= link_to "View Link Stats", link_stats_path %>
-    <% else %>
-      <%= link_to "Sign Up", signup_path %>
-      <%= link_to "Log In", login_path %>
-    <% end %>
-  </div>
-
-
-
-
-<%= form_for @url do |f|  %>
-  <%= f.label :original_url  %>
-  <%= f.text_field :original_url %>
-  <%= f.hidden_field :user_id %>
-  <%= f.submit %>
-<% end %>
-
 <% if @url.errors.any? %>
   <h3>Please correct these problems:</h3>
   <ul>
-    <% @url.errors.full_messages.each do |message| %>
-      <li><%= message %></li>
-    <% end %>
+  <% @url.errors.full_messages.each do |message| %>
+    <li><%= message %></li>
+  <% end %>
   </ul>
 <% end %>
+
+<div class='container'>
+  <div class='container'>
+    <div class='row'>
+      <div class='col-md-12 logo'>
+    <%= link_to image_tag('urly_tiny.png'), root_path %>
+      </div>
+    </div>
+  </div>
+
+  <div class='container'>
+    <div class='row'>
+      <div class='form-inline center-block col-md-12'>
+        <%= form_for @url do |f|  %>
+          <div class='form-group'>
+            <%= f.label :original_url, 'Original URL'  %>
+            <%= f.text_field :original_url %>
+            <%= f.hidden_field :user_id %>
+            <%= f.submit 'tiny!', :class => 'btn btn-default' %>
+          </div>
+        <% end %>
+      </div>
+    </div>
+
+    <% if @urls %>
+      <%= render 'urls/list' %>
+    <% end %>
+  </div>
+</div>
+
+
+
