--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,14 +2,16 @@
 <html>
 <head>
   <title>UrlyTiny</title>
-  <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
+  <%= stylesheet_link_tag "application", media: "all", "data-turbolinks-track" => true %>
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
   <%= csrf_meta_tags %>
-  <%= stylesheet_link_tag "styles" %>
 </head>
 <body>
-<%= flash[:notice] %>
-<%= yield %>
-
+	<%= render 'layouts/header' %>
+	<%= flash[:notice] %>
+	
+	<%= yield %>
 </body>
+<%= render 'layouts/footer' %>
 </html>
+
