--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,22 +1,43 @@
-<h1>Sign Up</h1>
-
-<%= form_for @user do |f| %>
-  <% if @user.errors.any? %>
-    <div class="error_messages">
-      <h2>Form is invalid</h2>
-      <ul>
-        <% @user.errors.full_messages.each do |message| %>
-          <li><%= message %></li>
-        <% end %>
-      </ul>
-    </div>
-  <% end %>
-
-    <%= f.label :email %>
-    <%= f.text_field :email %>
-    <%= f.label :password %>
-    <%= f.text_field :password %>
-    <%= f.label :password_confirmation %>
-    <%= f.text_field :password_confirmation %>
-    <%= f.submit %>
+<% if @user.errors.any? %>
+  <div class="error_messages">
+    <h2>Form is invalid</h2>
+    <ul>
+      <% @user.errors.full_messages.each do |message| %>
+        <li><%= message %></li>
+      <% end %>
+    </ul>
+  </div>
 <% end %>
+
+<div class='container'>
+  <div class='container'>
+    <div class='row'>
+      <div class='col-md-12 logo'>
+    <%= link_to image_tag('urly_tiny.png'), root_path %>
+      </div>
+    </div>
+  </div>
+
+  <div class='container'>
+    <div class='form-horizontal user'>
+      <h1>Sign Up</h1>
+      <%= form_for @user do |f| %>
+        <div class='form-group'>
+          <%= f.label :email %>
+          <%= f.text_field :email %>
+        </div>
+        <div class='form-group'>
+          <%= f.label :password %>
+          <%= f.text_field :password %>
+        </div>
+        <div class='form-group'>
+          <%= f.label :password_confirmation %>
+          <%= f.text_field :password_confirmation %>
+          <%= f.submit 'Log In', :class => 'btn btn-default' %>
+        </div>
+      <% end %>
+      <p><%= link_to 'Already made something tiny? Log in to existing account.', root_path %></p>
+    </div>
+  </div>
+</div>
+
