--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -28,7 +28,7 @@
         </div>
         <div class='form-group'>
           <%= f.label :password %>
-          <%= f.text_field :password %>
+          <%= f.password_field :password %>
         </div>
         <div class='form-group'>
           <%= f.label :password_confirmation %>
